[package]
name = "foundry-swift"
version = "0.1.0"
edition = "2021"
publish = []

build = "build.rs"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
swift-bridge-build = {path = "../../crates/swift-bridge-build"}

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
swift-bridge = {path = "../../", features = ["async"]}
foundry-compilers = { git = "https://github.com/foundry-rs/compilers" }
foundry-block-explorers = "0.1.1"
alloy-chains = "0.1.3"
alloy-primitives = { version = "0.5", default-features = false, features = ["std", "serde"] }
ethers = { version = "2.0", features = ["abigen", "ws", "rustls"] }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
serde = "1.0"
serde_json = "1.0"
eyre = "0.6"
